[package]
name = "prometheus_exporter"
version = "0.8.1"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

description = "Helper libary to export prometheus metrics using tiny-http."
documentation = "https://docs.rs/prometheus_exporter/"
homepage = "https://github.com/AlexanderThaller/prometheus_exporter"
keywords = ["prometheus-exporter", "prometheus-metrics", "metrics", "helper-libary", "prometheus"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/prometheus_exporter"

edition = "2018"

[package.metadata.docs.rs]
features = ["logging", "internal_metrics"]

[features]
# Feature logging enables the start and request logging of the server.
# Disable `prometheus_exporter` metrics by disabling internal_metrics feature
default = ["logging", "internal_metrics", "start_and_wait"]
logging = ["log"]
internal_metrics = ["lazy_static"]
start_and_wait = ["ctrlc"]

[dependencies]
ascii = "1"
ctrlc = { version = "3", features = ["termination"], optional = true }
lazy_static = { version = "1", optional = true }
log = { version = "0.4", optional = true }
prometheus = { version = "0.12", default-features = false }
thiserror = "1"
tiny_http = { version = "0.8", default-features = false }

[dev-dependencies]
env_logger = "0.8"
log = { version = "0.4" }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
